--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,16 @@
   		<artifactId>http-request</artifactId>
   		<version>6.0</version>
 	</dependency>
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.4</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3</version>
+	</dependency>
 	</dependencies>
 	<build>
 		<finalName>springmvc</finalName>
